# pycon_2023_django_admins

./: .gitignore  LICENSE  README.md  pyproject.toml
django_custom/: manage.py
django_custom/base/: admin.py  apps.py  auth_backends.py  constants.py  middlewares.py  models.py
django_custom/base/migrations/: 0001_initial.py  0002_alter_baseadminconfig_options.py
django_custom/base/templates/admin/: base_site.html
django_custom/base/templates/base/client_admin/: _nav_bar.html  all_cars.html  index.html
django_custom/base/templates/base/main_admin/: _nav_bar.html  index.html
django_custom/car/: admin.py  models.py
django_custom/car/migrations/: 0001_initial.py
django_custom/django_custom/: asgi.py  settings.py  urls.py  wsgi.py
django_custom/rental/: models.py
django_custom/rental/migrations/: 0001_initial.py
