[tool.poetry]
name = "django-custom"
version = "0.1.0"
description = "A demo project that will be used as an example during the PyConf"
authors = ["Jonhnatha Trigueiro <joepreludian@gmail.com>"]
license = "mit"
readme = "README.md"
packages = [{include = "django_custom"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
